test/org/midica/testfiles/failing/eff-flow-double-for-boolean.midica
INCLUDE inc/instruments.midica


0: hold.double.on()
